--- a/MakersMarktE5/LoginWIndow.xaml
+++ b/MakersMarktE5/LoginWIndow.xaml
@@ -9,6 +9,14 @@
     mc:Ignorable="d">
 
     <Grid>
-
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Spacing="20">
+            <TextBox x:Name="usernameTextBox" Header="Username" Width="auto"/>
+            <PasswordBox x:Name="passwordTextBox" Header="Password" Width="auto"/>
+            <TextBlock x:Name="ErrorTextBlock" Foreground="Red"/>
+            <StackPanel>
+                <Button x:Name="LoginButton" Click="LoginButton_Click" Content="Login" Width="100"/>
+                <Button x:Name="RegisterButton" Click="RegisterButton_Click" Content="Register" Width="100"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
