--- a/MakersMarktE5/MainWindow.xaml
+++ b/MakersMarktE5/MainWindow.xaml
@@ -43,6 +43,7 @@
 
             <Button Grid.Column="1" Grid.Row="2" Content="Go to template 2" Click="Button_Click"/>
 
+            <Button Grid.Column="2" Grid.Row="2" Content="Go to productpage" Click="ProductPageButton_Click"/>
 
             <Frame x:Name="MainFrame" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
         
