--- a/MakersMarktE5/template2.xaml
+++ b/MakersMarktE5/template2.xaml
@@ -27,8 +27,9 @@
 
             <StackPanel Grid.Column="0" Grid.RowSpan="3">
                 <Button Content="show_data" Width="auto" Click="Button_Click_1"/>
-                
+                <Frame x:Name="testFrame" />
             </StackPanel>
+
 
             <ListView x:Name="listView" Grid.Column="1" Grid.RowSpan="3" Background="DarkViolet" Foreground="White" SelectionChanged="listView_SelectionChanged">
                     <ListView.ItemTemplate>
@@ -52,7 +53,7 @@
                 <Image Source="/Assets/vjvngfgq71zo.png" Width="400" />
             </StackPanel>
 
-            <Frame x:Name="testFrame" Grid.Column="0" Grid.RowSpan="3"/>
+            
 
             <Frame x:Name="MainFrame" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
 
