--- a/MakersMarktE5/LoginWIndow.xaml
+++ b/MakersMarktE5/LoginWIndow.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window
-    x:Class="MakersMarktE5.LoginWIndow"
+    x:Class="MakersMarktE5.LoginWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MakersMarktE5"
