--- a/MakersMarktE5/Views/BuyerViews/ProductPage.xaml
+++ b/MakersMarktE5/Views/BuyerViews/ProductPage.xaml
@@ -17,8 +17,14 @@
                             <Image Source="/Assets/giraff.jpg" Width="220" Height="200" Stretch="UniformToFill" Margin="0,0,0,10"/>
                             <TextBlock Text="{Binding Name}" Foreground="#5e341a" FontSize="18" FontWeight="Bold" TextAlignment="Center"/>
                             <TextBlock Text="{Binding Description}" Foreground="#5e341a" FontSize="14" TextWrapping="Wrap" TextAlignment="Center"/>
-                            <TextBlock Text="Material: {Binding MaterialUsage}" Foreground="#5e341a" FontSize="12" TextWrapping="Wrap" TextAlignment="Center"/>
-                            <TextBlock Text="Production: {Binding ProductionTime}" Foreground="#5e341a" FontSize="12" TextWrapping="Wrap" TextAlignment="Center"/>
+                            <StackPanel Orientation="Horizontal" Spacing="5" HorizontalAlignment="Center">
+                                <TextBlock FontWeight="Bold" Text="Material: " Foreground="#5e341a" FontSize="12"/>
+                                <TextBlock Text="{Binding MaterialUsage}" Foreground="#5e341a" FontSize="12" TextWrapping="Wrap"/>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Spacing="5" HorizontalAlignment="Center">
+                                <TextBlock FontWeight="Bold" Text="Production: " Foreground="#5e341a" FontSize="12"/>
+                                <TextBlock Text="{Binding ProductionTime}" Foreground="#5e341a" FontSize="12" TextWrapping="Wrap"/>
+                            </StackPanel>
                         </StackPanel>
                     </Border>
                 </DataTemplate>
