--- a/MakersMarktE5/Views/ModeratorViews/ProductEditPage.xaml
+++ b/MakersMarktE5/Views/ModeratorViews/ProductEditPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Page
     x:Class="MakersMarktE5.Views.ModeratorViews.ProductEditPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,10 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="Transparent">
 
     <Grid Padding="20" HorizontalAlignment="Center">
-        <GridView x:Name="ProductListView" SelectionMode="None">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <GridView x:Name="ProductListView" SelectionMode="Single" Grid.Column="0" SelectionChanged="ProductListView_SelectionChanged">
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <Border Background="White" Padding="10" CornerRadius="10" Margin="10" Width="250" Height="Auto">
@@ -40,5 +44,11 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
+
+        <StackPanel Grid.Column="1" Padding="10">
+            <TextBlock Text="Select Categories" FontSize="16" FontWeight="Bold" Foreground="#5e341a"/>
+            <ListView x:Name="CategoryListView" SelectionMode="Multiple" Height="Auto" Background="#834f2f" BorderBrush="Transparent" BorderThickness="1" CornerRadius="5" Margin="0 10" DisplayMemberPath="Name"/>
+            <Button Content="Assign Categories" Click="AssignCategories_Click" Background="#5e341a" Foreground="White" Padding="10" Margin="10,0,0,0"/>
+        </StackPanel>
     </Grid>
 </Page>
