--- a/MakersMarktE5/Views/ModeratorViews/ModeratorWindow.xaml
+++ b/MakersMarktE5/Views/ModeratorViews/ModeratorWindow.xaml
@@ -18,8 +18,8 @@
         <StackPanel Grid.Column="0" Background="#5e341a" Width="250" HorizontalAlignment="Center">
             <Image Width="150" Height="Auto" Source="/Assets/Logo.png" Margin="5"/>
             <TextBlock Text="Moderator Dashboard" Foreground="White" FontSize="20" Padding="10" TextWrapping="WrapWholeWords"/>
-            <Button Content="Home" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
-            <Button Content="My Orders" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
+            <Button Content="Edit Products" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="ProductEditPageButton_Click"/>
+            <Button Content="Verify accounts/products" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="VerifyAccountProductPageButton_Click"/>
             <Button Content="Settings" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
             <TextBox PlaceholderText="Search for name" x:Name="SearchBar"/>
             <Button Content="Search" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="Search_Button_Click"/>
