--- a/MakersMarktE5/Views/ModeratorViews/ModeratorWindow.xaml
+++ b/MakersMarktE5/Views/ModeratorViews/ModeratorWindow.xaml
@@ -23,6 +23,13 @@
             <Button Content="Settings" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
             <TextBox PlaceholderText="Search for name" x:Name="SearchBar"/>
             <Button Content="Search" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="Search_Button_Click"/>
+            <Button Content="Logout"
+                    Background="Transparent"
+                    Foreground="White"
+                    FontSize="18"
+                    BorderThickness="0"
+                    Padding="10"
+                    Click="Logout_Click" />
         </StackPanel>
 
         <Grid Grid.Column="1">
