--- a/MakersMarktE5/Views/CreatorViews/CreatorWindow.xaml
+++ b/MakersMarktE5/Views/CreatorViews/CreatorWindow.xaml
@@ -11,30 +11,31 @@
 
     <Grid Background="#e4e0cf">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0"
-                    Background="#5e341a"
-                    Width="250"
-                    HorizontalAlignment="Center">
-            <Image Width="150"
-                   Height="Auto"
-                   Source="/Assets/Logo.png"
-                   Margin="5" />
+        <StackPanel Grid.Column="0" Background="#5e341a" Width="250" HorizontalAlignment="Center">
+            <Image Width="150" Height="Auto" Source="/Assets/Logo.png" Margin="5"/>
+            <Button Content="Home" x:Name="homeButton" Click="homeButton_Click" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
+            <Button Content="My Collection" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="MyCollectionPageButton_Click"/>
+            <Button Content="Settings" x:Name="settingButton" Click="settingButton_Click" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10"/>
+            <TextBox PlaceholderText="Search for name" x:Name="SearchBar"/>
+            <Button Content="Search" Background="Transparent" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" Click="Search_Button_Click"/>
+
+            <ComboBox x:Name="CategoryComboBox" Foreground="White" FontSize="18" BorderThickness="0" Padding="10" SelectionChanged="CategoryComboBox_SelectionChanged" DisplayMemberPath="Name" IsSynchronizedWithCurrentItem="False">
+            </ComboBox>
             <Button Content="Logout"
-                    Background="Transparent"
-                    Foreground="White"
-                    FontSize="18"
-                    BorderThickness="0"
-                    Padding="10"
-                    Click="Logout_Click" />
+                 Background="Transparent"
+                 Foreground="White"
+                 FontSize="18"
+                 BorderThickness="0"
+                 Padding="10"
+                 Click="Logout_Click" />
         </StackPanel>
 
         <Grid Grid.Column="1">
-            <Grid Margin="10,70,10,10"
-                  Background="#ece9dd">
+            <Grid Margin="10,70,10,10" Background="#ece9dd">
                 <Frame x:Name="MainFrame" />
             </Grid>
         </Grid>
