--- a/MakersMarktE5/Views/CreatorViews/MyCollectionPage.xaml
+++ b/MakersMarktE5/Views/CreatorViews/MyCollectionPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Page
     x:Class="MakersMarktE5.Views.CreatorViews.MyCollectionPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -18,10 +17,12 @@
                             <Image Source="/Assets/giraff.jpg" Width="220" Height="200" Stretch="UniformToFill" Margin="0,0,0,10"/>
                             <TextBlock Text="{Binding Name}" Foreground="#5e341a" FontSize="18" FontWeight="Bold" TextAlignment="Center"/>
                             <TextBlock Text="{Binding Description}" Foreground="#5e341a" FontSize="14" TextWrapping="Wrap" TextAlignment="Center"/>
+
                             <StackPanel Orientation="Horizontal" Spacing="5" HorizontalAlignment="Center">
                                 <TextBlock FontWeight="Bold" Text="Production: " Foreground="#5e341a" FontSize="12"/>
-                                <TextBlock Text="{Binding ProductionTime}" Foreground="#5e341a" FontSize="12" TextWrapping="WrapWholeWords"/>
+                                <TextBlock Text="{Binding ProductionTime}" Foreground="#5e341a" FontSize="12"/>
                             </StackPanel>
+
                             <StackPanel Margin="5,5,5,0">
                                 <TextBlock FontWeight="Bold" Text="Materials:" Foreground="#5e341a" FontSize="12" TextAlignment="Center"/>
                                 <ItemsControl ItemsSource="{Binding Materials}">
@@ -34,6 +35,16 @@
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
+                            </StackPanel>
+                            <!-- Buttons: Edit & Delete -->
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10" Margin="5,10,5,0">
+                                <Button Content="Edit" Click="EditProduct_Click"
+                                        Background="#e3812a" Foreground="White" Padding="10 5"
+                                        Tag="{Binding}" />
+
+                                <Button Content="Delete" Click="DeleteProduct_Click"
+                                        Background="Red" Foreground="White" Padding="5"
+                                        Tag="{Binding}" />
                             </StackPanel>
                         </StackPanel>
                     </Border>
